new Long cleanup